@@ -2,7 +2,7 @@ Bug reports, patches:
 ---------------------
   Please always check the latest version from my home page
   before reporting a bug. 
-    (http://www.sfs.nphil.uni-tuebingen.de/~hipp/mpg123.html)
+    (http://www.mpg123.de/)
   If you send me a patch, please use the 'unified' version.
   (diff -u ...)
 
